# undo

./: .gitignore  MANIFEST.in  Makefile  Makefile.dist  README.md  expression.py  history.py  pattern.py  resolve.py  setup.cfg  undo.py  utils.py
examples/: example.undo  example_undo.toml  syntax
pattern/: __init__.py  pattern.py
src/: expand.py  utils.py
src/test/: __init__.py  test_undo.py
src/test/test_pattern/: test_pattern_to_argparse.py
test/: __init__.py  __main__.py  test_expand.py  test_expression.py  test_history.py  test_resolve.py  test_undo.py
test/resources/: another_test.toml
test/resources/cli/: cli.toml
test/resources/support_all/: support-all.toml
test/test_pattern/: __init__.py  __main__.py  test_pattern.py  test_pattern_to_argparse.py  test_registry.py
test/test_undos/: __init__.py  __main__.py
test/test_undos/test_coreutils/: __init__.py  __main__.py  common.py  test_cp.py  test_install.py  test_link.py  test_ln.py  test_mkdir.py  test_mkfifo.py  test_mknod.py  test_mv.py
tests/: __init__.py  test_arg_pattern.py  test_expression.py  test_pattern.py  test_resolve.py  test_undo.py
tests/resources/allow_imprecise/: test.toml
tests/test_pattern/: test_pattern.py  test_pattern_to_argparse.py
tests/test_undos/: __main__.py
undo/: __init__.py  __main__.py  expand.py  expression.py  history.py  resolve.py  utils.py
undo/pattern/: __init__.py  pattern.py
undos/: README.md
undos/coreutils/: README.md  cp.toml  install.toml  link.toml  ln.toml  mkdir.toml  mkfifo.toml  mknod.toml  mv.toml
(+11 files in other folders)
