[metadata]
author = Josh Meranda
author_email = joshmeranda@gmail.com
license = MIT
license_file = LICENSE
name = undo
version = 1.0.0
url = https://github.com/joshmeranda/undo

[options]
packages = find:
install_requires =
    toml >= 0.10.0

include_package_data = true
package_data =
    undos

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts =
    main = undo:main